--- a/index.htm
+++ b/index.htm
@@ -23,10 +23,9 @@
           <label for="kg">體重kg</label> 
           <input type="text" id="kg" placeholder="請輸入體重">
         </form>
-        <div class="check-btn  check-btn-sucess">
-          <p>看結果<small></small><em></em></p>
-          <div class="reset-result"><img src="https://hexschool.github.io/JavaScript_HomeWork/assets/icons_loop.png" alt=""></div>
-          
+        <div class="check-btn">
+          <p>看結果<small>BMI</small><em></em></p>
+          <div id="reset-result" class="d-none"><img src="https://hexschool.github.io/JavaScript_HomeWork/assets/icons_loop.png" alt=""></div> 
         </div>
         
       </div>
@@ -37,41 +36,6 @@
     <div class="container main">
       <h2>BMI全記錄</h2>
       <ul class="BMI-list">
-        <li class="border-sucess">
-          <p>理想</p>
-          <div>
-            <small>BMI</small>
-            <p>20.90</p>
-          </div>
-          <div>
-            <small>weight</small>
-            <p>70kg</p>
-          </div>
-          <div>
-            <small>height</small>
-            <p>180cm</p>
-          </div>
-          <small>9-24 2021 </small>
-        </li>
-
-        <li class="border-gg">
-          <p>過重</p>
-          <div>
-            <small>BMI</small>
-            <p>20.90</p>
-          </div>
-          <div>
-            <small>weight</small>
-            <p>70kg</p>
-          </div>
-          <div>
-            <small>height</small>
-            <p>180cm</p>
-          </div>
-          <small>9-24 2021 </small>
-        </li>
-
-
       </ul>
     </div>
   </div>
