--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
           <input type="text" id="kg" placeholder="請輸入體重">
         </form>
         <div class="check-btn">
-          <p>看結果<small>BMI</small><em></em></p>
+          <p>看結果<small></small><em></em></p>
           <div id="reset-result" class="d-none"><img src="https://hexschool.github.io/JavaScript_HomeWork/assets/icons_loop.png" alt=""></div> 
         </div>
         
